# notify

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  install.sh  notify.rs  whoami_test.rs
.github/workflows/: release.yml
