[package]
name = "notify"
version = "0.1.0"
edition = "2021"
authors = ["Graham <graham@example.com>"]
description = "Run shell commands and email completion status with runtime and output"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/notify"
keywords = ["email", "notification", "cli", "command", "smtp"]
categories = ["command-line-utilities"]

[[bin]]
name = "notify"
path = "notify.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
directories = "6.0"
hostname = "0.4"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
whoami = "2.1"
